Updated main page UI and enhancements

--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
         <iframe src="content.html" name="main" frameborder="0"></iframe>
     </main>
     <footer>
-        <button id="logout-btn">Logout</button>
+        <button id="logout-btn">Logout/Back to login page</button>
         <p>&copy; 2024 Protein Nation. All Rights Reserved.</p>
     </footer>
 </body>
